test: move folder

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,11 +15,15 @@ jobs:
   build-publish-deploy:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: /Part3/Deployment-Exple
+
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GKE_SA_KEY }}'
