--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,13 +11,15 @@ env:
   SERVICE: dwk-environments
   BRANCH: ${{ github.ref_name }}
 
+defaults:
+  run:
+    working-directory: /Part3/Deployment-Exple
+
 jobs:
   build-publish-deploy:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./Part3/Deployment-Exple
+
 
 
     steps:
