--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ env:
 
 defaults:
   run:
-    working-directory: /Part3/Deployment-Exple
+    working-directory: ./Part3/Deployment-Exple
 
 jobs:
   build-publish-deploy:
