--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,16 +11,10 @@ env:
   SERVICE: dwk-environments
   BRANCH: ${{ github.ref_name }}
 
-defaults:
-  run:
-    working-directory: ./Part3/Deployment-Exple
-
 jobs:
   build-publish-deploy:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
-
-
 
     steps:
       - name: Checkout
@@ -47,6 +41,7 @@ jobs:
 
       - name: Build
         run: docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
+        working-directory: Part3/Deployment-Exple
       
       - name: Publish
         run: docker push "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
@@ -60,3 +55,4 @@ jobs:
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment $SERVICE
           kubectl get services -o wide
+        working-directory: Part3/Deployment-Exple
