--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build
         run: docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
-        working-directory: Part3/Deployment-Exple
+        working-directory: ./Part3/Deployment-Exple
       
       - name: Publish
         run: docker push "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
@@ -55,4 +55,4 @@ jobs:
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment $SERVICE
           kubectl get services -o wide
-        working-directory: Part3/Deployment-Exple
+        working-directory: ./Part3/Deployment-Exple
