--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,16 +24,16 @@ jobs:
       with:
         credentials_json: '${{ secrets.GKE_SA_KEY }}'
     
-    - name: 'Set up Cloud SDK'
+    - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
 
-    - name: 'Use gcloud CLI'
+    - name: Use gcloud CLI
       uses: gcloud info
 
     - run: gcloud --quiet auth configure-docker
 
-    - name: 'Get GKE credentials'
-      uses: 'google-github-actions/get-gke-credentials@v2'
+    - name: Get GKE credentials
+      uses: google-github-actions/get-gke-credentials@v2
       with:
         cluster_name: '${{ env.GKE_CLUSTER }}'
         project_id: '${{ env.PROJECT_ID }}'
