--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ env:
   GKE_CLUSTER: dwk-cluster
   GKE_ZONE: europe-north1-b
   IMAGE: dwk-environments
-  SERVICE: dwk-environments
+  DEPLOYMENT: dwk-environments
   BRANCH: ${{ github.ref_name }}
 
 jobs:
@@ -23,12 +23,12 @@ jobs:
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GKE_SA_KEY }}'
-      
+
       - name: 'Set up Cloud SDK'
         uses: google-github-actions/setup-gcloud@v2
 
       - name: 'Use gcloud CLI'
-        uses: gcloud info
+        run: gcloud info
 
       - run: gcloud --quiet auth configure-docker
 
@@ -39,20 +39,17 @@ jobs:
           project_id: '${{ env.PROJECT_ID }}'
           location: '${{ env.GKE_ZONE }}'
 
-      - name: Build
-        run: docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
-        working-directory: ./Part3/Deployment-Exple
-      
-      - name: Publish
-        run: docker push "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
+      - name: Build and publish
+        run: |-
+          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA" .
+          docker push "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
 
       - name: Set up Kustomize
-        uses: imranismail/setup-kustomize@v.2.1
+        uses: imranismail/setup-kustomize@v2
 
       - name: Deploy
         run: |-
           kustomize edit set image PROJECT/IMAGE=gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment $SERVICE
+          kubectl rollout status deployment $DEPLOYMENT
           kubectl get services -o wide
-        working-directory: ./Part3/Deployment-Exple
