--- a/Part3/Exercise3.03/manifests/persistentvolumeclaim.yaml
+++ b/Part3/Exercise3.03/manifests/persistentvolumeclaim.yaml
@@ -5,7 +5,7 @@ metadata:
   name: project-claim
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
