test strategy recreate

--- a/Part3/Exercise3.03/manifests/deployment-todos-backend.yaml
+++ b/Part3/Exercise3.03/manifests/deployment-todos-backend.yaml
@@ -4,6 +4,8 @@ metadata:
   namespace: project
   name: todo-backend-dep
 spec:
+  strategy:
+    type: Recreate
   replicas: 1
   selector:
     matchLabels:
