--- a/Part3/Exercise3.03/manifests/deployment-project.yaml
+++ b/Part3/Exercise3.03/manifests/deployment-project.yaml
@@ -4,6 +4,8 @@ metadata:
   namespace: project
   name: project-dep
 spec:
+  strategy:
+    type: Recreate
   replicas: 1
   selector:
     matchLabels:
