--- a/Part3/Exercise3.03/manifests/statefulset-todos-db.yaml
+++ b/Part3/Exercise3.03/manifests/statefulset-todos-db.yaml
@@ -37,10 +37,18 @@ spec:
                   key: DATABASE-USER
             - name: PGDATA
               value: /data/pgdata
-      volumes:
-        - name: somedata
-          persistentVolumeClaim:
-            claimName: somedata-pvc
+      # volumes:
+      #   - name: somedata
+      #     persistentVolumeClaim:
+      #       claimName: somedata-pvc
+  volumeClaimTemplates:
+    - metadata:
+        name: somedata
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 100Mi
 ---
 apiVersion: v1
 kind: Service
