--- a/Part3/Exercise3.03/kustomization.yaml
+++ b/Part3/Exercise3.03/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - manifests/ingress.yaml
   - manifests/statefulset-todos-db.yaml
   - manifests/persistentvolumeclaim.yaml
+  - manifests/persistentvolumeclaim-db.yaml
 images:
   - name: PROJECT/IMAGE/PROJECT
     newName: sushashu/project:v1.0
