--- a/.github/workflows/main-exercise3.03.yaml
+++ b/.github/workflows/main-exercise3.03.yaml
@@ -76,23 +76,7 @@ jobs:
           version: latest
         id: install
 
-      - name: Get SOPS secret
-        uses: nhedger/get-sops-secret@v1
-        with:
-          # Path to the SOPS encrypted file that contains the secret.
-          # Required.
-          secrets-file: secret.enc.yaml
-
-          # Name of the secret to retrieve
-          # Required.
-          secret-name: my-secret
-
-          # AGE private key
-          # Required.
-          age-key: ${{ secrets.AGE_PRIVATE_KEY }}
-          sops-version: latest
-
-      - name: Deploy Secret
+      - name: Decrypt and deploy secrets
         run: |-
-          echo "${{ steps.get-secret.outputs.secret }}" > secrets.yaml
-          kubectl apply -f secrets.yaml
+          export SOPS_AGE_KEY_FILE=${{ secrets.AGE_KEYS }}
+          sops --decrypt secret.enc.yaml | kubectl apply -f -
