--- a/.github/workflows/main-exercise3.03.yaml
+++ b/.github/workflows/main-exercise3.03.yaml
@@ -78,5 +78,6 @@ jobs:
 
       - name: Decrypt and deploy secrets
         run: |-
-          export SOPS_AGE_KEY_FILE="${{ secrets.AGE_KEYS }}"
+          echo ${{ secrets.AGE_KEYS }} > keys.txt
+          export SOPS_AGE_KEY_FILE=keys.txt
           sops --decrypt secret.enc.yaml | kubectl apply -f -
