--- a/.github/workflows/main-exercise3.03.yaml
+++ b/.github/workflows/main-exercise3.03.yaml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Decrypt and deploy secrets
         run: |-
-          echo "${{ secrets.AGE_KEYS }}" > keys.txt
-          export SOPS_AGE_KEY_FILE=keys.txt
+          export SOPS_AGE_KEY_FILE=${{ secrets.AGE_KEYS }}
           sops --decrypt secret.enc.yaml | kubectl apply -f -
+        working-directory: ./Part3/Exercise3.03
+
