--- a/.github/workflows/main-exercise3.04.yaml
+++ b/.github/workflows/main-exercise3.04.yaml
@@ -3,7 +3,9 @@ name: Release application
 on:
   push:
     paths:
-      - 'Part3/Exercise3.03/**'
+      - 'Part3/Exercise3.04/**'
+    branches:
+      - '*'
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
@@ -47,7 +49,7 @@ jobs:
           docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-backend:$BRANCH-$GITHUB_SHA" "./todo-backend"
           docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-db:$BRANCH-$GITHUB_SHA" "./todo-db"
           docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-job:$BRANCH-$GITHUB_SHA" "./todo-job"
-        working-directory: ./Part3/Exercise3.03
+        working-directory: ./Part3/Exercise3.04
 
       - name: Publish
         run: |-
@@ -55,20 +57,23 @@ jobs:
           docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-backend:$BRANCH-$GITHUB_SHA"
           docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-db:$BRANCH-$GITHUB_SHA"
           docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-job:$BRANCH-$GITHUB_SHA"
-        working-directory: ./Part3/Exercise3.03
+        working-directory: ./Part3/Exercise3.04
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2
 
       - name: Deploy
         run: |-
+          kubectl create namespace ${GITHUB_REF#refs/heads/} || true
+          kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
+          kustomize edit set namespace ${GITHUB_REF#refs/heads/}
           kustomize edit set image PROJECT/IMAGE/PROJECT=gcr.io/$PROJECT_ID/$IMAGE/project:$BRANCH-$GITHUB_SHA
           kustomize edit set image PROJECT/IMAGE/TODO-BACKEND=gcr.io/$PROJECT_ID/$IMAGE/todo-backend:$BRANCH-$GITHUB_SHA
           kustomize edit set image PROJECT/IMAGE/TODO-DB=gcr.io/$PROJECT_ID/$IMAGE/todo-db:$BRANCH-$GITHUB_SHA
           kustomize edit set image PROJECT/IMAGE/TODO-JOB=gcr.io/$PROJECT_ID/$IMAGE/todo-job:$BRANCH-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
           kubectl get services -o wide
-        working-directory: ./Part3/Exercise3.03
+        working-directory: ./Part3/Exercise3.04
 
       - name: Sops Binary Installer
         uses: mdgreenwald/mozilla-sops-action@v1.6.0
@@ -81,4 +86,4 @@ jobs:
           echo "${{ secrets.AGE_KEYS }}" > keys.txt
           export SOPS_AGE_KEY_FILE=keys.txt
           sops --decrypt secret.enc.yaml | kubectl apply -f -
-        working-directory: ./Part3/Exercise3.03
+        working-directory: ./Part3/Exercise3.04
