--- a/Part3/Exercise3.04/kustomization.yaml
+++ b/Part3/Exercise3.04/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - manifests/secret.yaml
   - manifests/cronjob-todo.yaml
   - manifests/deployment-project.yaml
   - manifests/deployment-todos-backend.yaml
