--- a/.github/workflows/main-exercise3.04.yaml
+++ b/.github/workflows/main-exercise3.04.yaml
@@ -1,4 +1,4 @@
-name: Release application
+name: Release application 3.04
 
 on:
   push:
@@ -45,18 +45,18 @@ jobs:
 
       - name: Build
         run: |-
-          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/project:$BRANCH-$GITHUB_SHA" "./project"
-          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-backend:$BRANCH-$GITHUB_SHA" "./todo-backend"
-          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-db:$BRANCH-$GITHUB_SHA" "./todo-db"
-          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-job:$BRANCH-$GITHUB_SHA" "./todo-job"
+          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/project:${GITHUB_REF#refs/heads/}-$GITHUB_SHA" "./project"
+          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-backend:${GITHUB_REF#refs/heads/}-$GITHUB_SHA" "./todo-backend"
+          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-db:${GITHUB_REF#refs/heads/}-$GITHUB_SHA" "./todo-db"
+          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE/todo-job:${GITHUB_REF#refs/heads/}-$GITHUB_SHA" "./todo-job"
         working-directory: ./Part3/Exercise3.04
 
       - name: Publish
         run: |-
-          docker push "gcr.io/$PROJECT_ID/$IMAGE/project:$BRANCH-$GITHUB_SHA"
-          docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-backend:$BRANCH-$GITHUB_SHA"
-          docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-db:$BRANCH-$GITHUB_SHA"
-          docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-job:$BRANCH-$GITHUB_SHA"
+          docker push "gcr.io/$PROJECT_ID/$IMAGE/project:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
+          docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-backend:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
+          docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-db:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
+          docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-job:${GITHUB_REF#refs/heads/}-$GITHUB_SHA"
         working-directory: ./Part3/Exercise3.04
 
       - name: Set up Kustomize
@@ -67,10 +67,10 @@ jobs:
           kubectl create namespace ${GITHUB_REF#refs/heads/} || true
           kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
           kustomize edit set namespace ${GITHUB_REF#refs/heads/}
-          kustomize edit set image PROJECT/IMAGE/PROJECT=gcr.io/$PROJECT_ID/$IMAGE/project:$BRANCH-$GITHUB_SHA
-          kustomize edit set image PROJECT/IMAGE/TODO-BACKEND=gcr.io/$PROJECT_ID/$IMAGE/todo-backend:$BRANCH-$GITHUB_SHA
-          kustomize edit set image PROJECT/IMAGE/TODO-DB=gcr.io/$PROJECT_ID/$IMAGE/todo-db:$BRANCH-$GITHUB_SHA
-          kustomize edit set image PROJECT/IMAGE/TODO-JOB=gcr.io/$PROJECT_ID/$IMAGE/todo-job:$BRANCH-$GITHUB_SHA
+          kustomize edit set image PROJECT/IMAGE/PROJECT=gcr.io/$PROJECT_ID/$IMAGE/project:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+          kustomize edit set image PROJECT/IMAGE/TODO-BACKEND=gcr.io/$PROJECT_ID/$IMAGE/todo-backend:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+          kustomize edit set image PROJECT/IMAGE/TODO-DB=gcr.io/$PROJECT_ID/$IMAGE/todo-db:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
+          kustomize edit set image PROJECT/IMAGE/TODO-JOB=gcr.io/$PROJECT_ID/$IMAGE/todo-job:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
           kubectl get services -o wide
         working-directory: ./Part3/Exercise3.04
@@ -85,7 +85,7 @@ jobs:
         run: |-
           echo "${{ secrets.AGE_KEYS }}" > keys.txt
           export SOPS_AGE_KEY_FILE=keys.txt
-          sops --decrypt secret.enc.yaml > ./manifests/secret.yaml
+          sops --decrypt -d secret.enc.yaml > ./manifests/secret.yaml
           kustomize edit set namespace ${GITHUB_REF#refs/heads/}
           kubectl apply -f manifests/secret.yaml
         working-directory: ./Part3/Exercise3.04
