test to default

--- a/Part3/Exercise3.04/secret.enc.yaml
+++ b/Part3/Exercise3.04/secret.enc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    namespace: project
+    namespace: default
     name: database-secrets
 data:
     DATABASE-USER: ENC[AES256_GCM,data:LZqHqhsvveA=,iv:uKLHGxSHvUbPyj3udEu8XXL9u0CDalDJbNixLBz6iZg=,tag:O+D/uiKTQf6JvAzhWQlXcw==,type:str]
