--- a/Part3/Exercise3.04/manifests/deployment-project.yaml
+++ b/Part3/Exercise3.04/manifests/deployment-project.yaml
@@ -30,7 +30,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: project
+  namespace: default
   name: project-svc
 spec:
   type: NodePort
