--- a/Part3/Exercise3.04/manifests/deployment-todos-backend.yaml
+++ b/Part3/Exercise3.04/manifests/deployment-todos-backend.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: project
+  namespace: default
   name: todo-backend-svc
 spec:
   type: NodePort
