--- a/.github/workflows/main-exercise3.03.yaml
+++ b/.github/workflows/main-exercise3.03.yaml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'Part3/Exercise3.03/**'
+      - 'Part3/Exercise3.07/**'
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
