--- a/.github/workflows/mail-exercise3.07.yaml
+++ b/.github/workflows/mail-exercise3.07.yaml
@@ -59,6 +59,19 @@ jobs:
           docker push "gcr.io/$PROJECT_ID/$IMAGE/todo-backup-job:$BRANCH-$GITHUB_SHA"
         working-directory: ./Part3/Exercise3.07
 
+      - name: Sops Binary Installer
+        uses: mdgreenwald/mozilla-sops-action@v1.6.0
+        with:
+          version: latest
+        id: install
+
+      - name: Decrypt secrets
+        run: |-
+          echo "${{ secrets.AGE_KEYS }}" > keys.txt
+          export SOPS_AGE_KEY_FILE=keys.txt
+          sops --decrypt secret.enc.yaml > ./manifests/secret.yaml
+        working-directory: ./Part3/Exercise3.07
+
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2
 
@@ -71,17 +84,4 @@ jobs:
           kustomize edit set image PROJECT/IMAGE/TODO-DB-BACKUP=gcr.io/$PROJECT_ID/$IMAGE/todo-backup-job:$BRANCH-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
           kubectl get services -o wide
-        working-directory: ./Part3/Exercise3.07
-
-      - name: Sops Binary Installer
-        uses: mdgreenwald/mozilla-sops-action@v1.6.0
-        with:
-          version: latest
-        id: install
-
-      - name: Decrypt and deploy secrets
-        run: |-
-          echo "${{ secrets.AGE_KEYS_3_03 }}" > keys.txt
-          export SOPS_AGE_KEY_FILE=keys.txt
-          sops --decrypt secret.enc.yaml | kubectl apply -f -
         working-directory: ./Part3/Exercise3.07
