--- a/Part3/Exercise3.07/manifests/cronjob-db-backup.yaml
+++ b/Part3/Exercise3.07/manifests/cronjob-db-backup.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: default
   name: todo-db-backup
 spec:
-  schedule: "/5 * * * *"
+  schedule: "*/5 * * * *"
   jobTemplate:
     spec:
       template:
