fix workflow and test 4.07

--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -21,14 +21,23 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # tag image with the GitHub SHA to get a unique tag
-      - name: Build and publish backend
+      - name: Build and publish PINGPONG
         run: |-
           docker build --tag "sushashi/pingpong:$GITHUB_SHA" .
-          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA"
-          docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA"
           docker push "sushashi/pingpong:$GITHUB_SHA"
-          docker push "sushashi/logoutput-reader:$GITHUB_SHA"
+        working-directory: ./Part4/Exercise4.07/pingpong
+
+      - name: Build and publish WRITER
+        run: |-
+          docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA"
           docker push "sushashi/logoutput-writer:$GITHUB_SHA"
+        working-directory: ./Part4/Exercise4.07/logoutput-writer
+
+      - name: Build and publish READER
+        run: |-
+          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA"
+          docker push "sushashi/logoutput-reader:$GITHUB_SHA"
+        working-directory: ./Part4/Exercise4.07/logoutput-reader
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2
@@ -38,7 +47,6 @@ jobs:
           kustomize edit set image IMAGE/PINGPONG=sushashi/pingpong:$GITHUB_SHA
           kustomize edit set image IMAGE/WRITER=sushashi/logoutput-writer:$GITHUB_SHA
           kustomize edit set image IMAGE/READER=sushashi/logoutput-reader:$GITHUB_SHA
-
 
       - name: commit kustomization.yaml to GitHub
         uses: EndBug/add-and-commit@v9
