--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -14,30 +14,49 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # tag image with the GitHub SHA to get a unique tag
+      - name: build
+        run: |-
+          docker build --tag "sushashi/pingpong:$GITHUB_SHA" ./Part4/Exercise4.07/pingpong
+          docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-writer
+          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-reader
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # tag image with the GitHub SHA to get a unique tag
-      - name: Build and publish PINGPONG
+      - name: publish
         run: |-
-          docker build --tag "sushashi/pingpong:$GITHUB_SHA" .
           docker push "sushashi/pingpong:$GITHUB_SHA"
-        working-directory: ./Part4/Exercise4.07/pingpong
-
-      - name: Build and publish WRITER
-        run: |-
-          docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA" .
           docker push "sushashi/logoutput-writer:$GITHUB_SHA"
-        working-directory: ./Part4/Exercise4.07/logoutput-writer
-
-      - name: Build and publish READER
-        run: |-
-          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" .
           docker push "sushashi/logoutput-reader:$GITHUB_SHA"
-        working-directory: ./Part4/Exercise4.07/logoutput-reader
+
+
+      # - name: Build and publish PINGPONG
+      #   run: |-
+      #     docker build --tag "sushashi/pingpong:$GITHUB_SHA" .
+      #     docker push "sushashi/pingpong:$GITHUB_SHA"
+      #   working-directory: ./Part4/Exercise4.07/pingpong
+
+      # - name: Build and publish WRITER
+      #   run: |-
+      #     docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA" .
+      #     docker push "sushashi/logoutput-writer:$GITHUB_SHA"
+      #   working-directory: ./Part4/Exercise4.07/logoutput-writer
+
+      # - name: Build and publish READER
+      #   run: |-
+      #     docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" .
+      #     docker push "sushashi/logoutput-reader:$GITHUB_SHA"
+      #   working-directory: ./Part4/Exercise4.07/logoutput-reader
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2
