--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -14,30 +14,36 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # tag image with the GitHub SHA to get a unique tag
-      - name: build
-        run: |-
-          docker build --tag "sushashi/pingpong:$GITHUB_SHA" ./Part4/Exercise4.07/pingpong
-          docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-writer
-          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-reader
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: publish
+      # tag image with the GitHub SHA to get a unique tag
+      # - name: build
+      #   run: |-
+      #     docker build --tag "sushashi/pingpong:$GITHUB_SHA" ./Part4/Exercise4.07/pingpong
+      #     docker build --tag "sushashi/logoutput-writer:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-writer
+      #     docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-reader
+
+      - name: build
         run: |-
-          docker push "sushashi/pingpong:$GITHUB_SHA"
-          docker push "sushashi/logoutput-writer:$GITHUB_SHA"
+          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-reader
           docker push "sushashi/logoutput-reader:$GITHUB_SHA"
+
+
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # - name: publish
+      #   run: |-
+      #     docker push "sushashi/pingpong:$GITHUB_SHA"
+      #     docker push "sushashi/logoutput-writer:$GITHUB_SHA"
+      #     docker push "sushashi/logoutput-reader:$GITHUB_SHA"
 
 
       # - name: Build and publish PINGPONG
