--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -29,9 +29,9 @@ jobs:
 
       - name: build
         run: |-
-          docker build -t docker.io/sushashi/logoutput-reader:$GITHUB_SHA ./Part4/Exercise4.07/logoutput-reader
-          docker push docker.io/sushashi/logoutput-reader:$GITHUB_SHA
-
+          docker build -t sushashi/logoutput-reader:$GITHUB_SHA .
+          docker push sushashi/logoutput-reader:$GITHUB_SHA
+        working-directory: ./Part4/Exercise4.07/logoutput-reader
 
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
