--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -29,8 +29,8 @@ jobs:
 
       - name: build
         run: |-
-          docker build -t sushashi/logoutput-reader:$GITHUB_SHA .
-          docker push sushashi/logoutput-reader:$GITHUB_SHA
+          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" .
+          docker push "sushashi/logoutput-reader:$GITHUB_SHA"
         working-directory: ./Part4/Exercise4.07/logoutput-reader
 
       # - name: Login to Docker Hub
