--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -46,7 +46,9 @@ jobs:
         with:
           context: ./Part4/Exercise4.07/logoutput-reader
           push: true
-          tags: sushashi/logoutput-reader:$GITHUB_SHA
+          tags: "sushashi/logoutput-reader:$GITHUB_SHA"
+
+          
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
       #   with:
