--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: build
         run: |-
-          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" .
+          docker build --tag "sushashi/logoutput-reader:$GITHUB_SHA" ./Part4/Exercise4.07/logoutput-reader
           docker push "sushashi/logoutput-reader:$GITHUB_SHA"
 
       # - name: Login to Docker Hub
