--- a/.github/workflows/main-exercise4.07.yaml
+++ b/.github/workflows/main-exercise4.07.yaml
@@ -14,13 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -48,6 +41,7 @@ jobs:
           kustomize edit set image IMAGE/PINGPONG=sushashu/pingpong:$GITHUB_SHA
           kustomize edit set image IMAGE/WRITER=sushashu/logoutput-writer:$GITHUB_SHA
           kustomize edit set image IMAGE/READER=sushashu/logoutput-reader:$GITHUB_SHA
+        working-directory: ./Part4/Exercise4.07
 
       - name: commit kustomization.yaml to GitHub
         uses: EndBug/add-and-commit@v9
