New version released 61dcba8e0c80fff6ce14ae45c8241272cba5e97a

--- a/Part4/Exercise4.07/kustomization.yaml
+++ b/Part4/Exercise4.07/kustomization.yaml
@@ -12,10 +12,10 @@ resources:
 images:
 - name: IMAGE/PINGPONG
   newName: sushashu/pingpong
-  newTag: "4.01"
-- name: IMAGE/WRITER
-  newName: sushashu/logoutput-writer
-  newTag: "1.10"
+  newTag: e327376fc3992fa191bd49bba0531151ef3d0303
 - name: IMAGE/READER
   newName: sushashu/logoutput-reader
-  newTag: "4.01"
+  newTag: e327376fc3992fa191bd49bba0531151ef3d0303
+- name: IMAGE/WRITER
+  newName: sushashu/logoutput-writer
+  newTag: e327376fc3992fa191bd49bba0531151ef3d0303
