--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
 patches:
   - path: deployment-broadcaster.yaml
 
+namePrefix: prod-
+
 images:
 - name: IMAGE/CRONJOB-TODO
   newName: sushashu/todo-job
