--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 resources:
 - ./../../base
 
+namePrefix: staging-
+
 images:
 - name: IMAGE/CRONJOB-TODO
   newName: sushashu/todo-job
