test without prefix

--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
 - ./../../base
 
-namePrefix: staging-
+# namePrefix: staging-
 
 images:
 - name: IMAGE/CRONJOB-TODO
