--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/deployment-broadcast.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/deployment-broadcast.yaml
@@ -19,7 +19,7 @@ spec:
           image: IMAGE/BROADCASTER
           env:
             - name: PROD_ENV
-              value: true
+              value: 'true'
             - name: NATS_URL
               value: nats://my-nats:4222
             - name: DISCORD_URL
