--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/deployment-broadcaster.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/deployment-broadcaster.yaml
@@ -22,4 +22,8 @@ spec:
               value: "'false'"
             - name: NATS_URL
               value: nats://my-nats:4222
-
+            - name: DISCORD_URL
+              valueFrom:
+                secretKeyRef:
+                  name: database-secrets
+                  key: DISCORD-URL
