--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/prefixptransformer.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/prefixptransformer.yaml
@@ -2,6 +2,7 @@ apiVersion: builtin
 kind: PrefixSuffixTransformer
 metadata:
   name: customPrefixer
+  namespace: project
 prefix: "staging-"
 fieldSpecs:
 - kind: Deployment
