--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 
 namePrefix: staging-
 transformers:
-  - prefixtransformer.yaml
+  - ./prefixtransformer.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
