--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -4,8 +4,10 @@ resources:
 - ./../../base
 
 namePrefix: staging-
-transformers:
-  - ./prefixtransformer.yaml
+
+patches: 
+ - path: dep-project.yaml
+
 
 images:
 - name: IMAGE/CRONJOB-TODO
