--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
 namePrefix: staging-
 
 patches: 
- - path: dep-project.yaml
- - path: dep-backend.yaml
+ - patch: dep-project.yaml
+ - patch: dep-backend.yaml
 
 
 images:
