--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/analysistemplate.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/analysistemplate.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cpu-usage-rate
 spec:
   metrics:
-  - name: cpu-usage-rate
+  - name: $(TEMPLATE_NAME)
     initialDelay: 10m
     successCondition: result < 0.5
     provider:
