--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/analysistemplate.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/analysistemplate.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: project
   name: cpu-usage-rate
 spec:
-  templateName: $(TEMPLATE_NAME)
+  templateName: TEMPLATE_NAME
   metrics:
   - name: cpu-usage-rate
     initialDelay: 10m
