--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -4,8 +4,9 @@ resources:
 - ./../../base
 
 namePrefix: staging-
-# openapi:
-#   path: https://github.com/argoproj/argo-schema-generator/raw/main/schema/argo_all_k8s_kustomize_schema.json
+
+patches:
+  - path: analysistemplate.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
