--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
 
 namePrefix: staging-
 
-patches:
-  - path: analysistemplate.yaml
+patchesStrategicMerge:
+  - analysistemplate.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
