--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,8 +5,9 @@ resources:
 
 namePrefix: staging-
 
-patchesStrategicMerge:
-  - analysistemplate.yaml
+patches:
+  - path: deploy-project.yaml
+  - path: deploy-todos-backend.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
