--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -3,11 +3,11 @@ kind: Kustomization
 resources:
 - ./../../base
 
-# namePrefix: staging-
+namePrefix: staging-
 
-# patches:
-#   - path: deploy-project.yaml
-#   - path: deploy-todos-backend.yaml
+patches:
+  # - path: deploy-project.yaml
+  - path: deploy-todos-backend.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
