--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/deploy-todos-backend.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/deploy-todos-backend.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
-metadata:
-  namespace: project
-  name: todo-backend-dep
+# metadata:
+#   namespace: project
+#   name: todo-backend-dep
 spec:
   strategy:
     canary:
