--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -8,7 +8,7 @@ namePrefix: staging-
 patches:
   - path: deploy-project.yaml
   - path: deploy-todos-backend.yaml
-  - path: statefulset-todos-db.yaml
+  # - path: statefulset-todos-db.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
