--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/deploy-project.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/deploy-project.yaml
@@ -10,9 +10,9 @@ spec:
         - analysis:
             templates:
               - templateName: staging-cpu-usage-rate
-  template:
-    spec:
-      volumes:
-        -name: files-storage
-        persistentVolumeClaim:
-          claimName: staging-project-claim
+  # template:
+  #   spec:
+  #     volumes:
+  #       -name: files-storage
+  #       persistentVolumeClaim:
+  #         claimName: staging-project-claim
