--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/deploy-project.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/deploy-project.yaml
@@ -1,18 +1,18 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
-metadata:
-  namespace: project
-  name: project-dep
-spec:
-  strategy:
-    canary:
-      steps:
-        - analysis:
-            templates:
-              - templateName: staging-cpu-usage-rate
-  # template:
-  #   spec:
-  #     volumes:
-  #       -name: files-storage
-  #       persistentVolumeClaim:
-  #         claimName: staging-project-claim
+# apiVersion: argoproj.io/v1alpha1
+# kind: Rollout
+# metadata:
+#   namespace: project
+#   name: project-dep
+# spec:
+#   strategy:
+#     canary:
+#       steps:
+#         - analysis:
+#             templates:
+#               - templateName: staging-cpu-usage-rate
+#   # template:
+#   #   spec:
+#   #     volumes:
+#   #       -name: files-storage
+#   #       persistentVolumeClaim:
+#   #         claimName: staging-project-claim
