--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ./../../base
+namespace: staging
+# namePrefix: staging-
 
-namePrefix: staging-
-
-patches:
-  - path: deploy-project.yaml
-  - path: deploy-todos-backend.yaml
+# patches:
+#   - path: deploy-project.yaml
+#   - path: deploy-todos-backend.yaml
   # - path: statefulset-todos-db.yaml
 
 images:
