--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 namespace: production
 
 patches:
-  - path: deployment-broadcaster.yaml
+  - path: deployment-broadcast.yaml
 
 # namePrefix: prod-
 
