--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   ingressClassName: nginx
   rules:
   - host: base
-  - http:
+    http:
       paths:
       - path: /
         pathType: Prefix
