--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -8,7 +8,14 @@ namespace: production
 
 patches:
   - path: deployment-broadcast.yaml
-  - path: ingress.yaml
+
+patchesJson6902:
+- target:
+    group: networking.k8s.io
+    version: v1
+    kind: Ingress
+    name: project-ingress
+  path: ingress.yaml
 
 # namePrefix: prod-
 
